# pycircstat2

./: .gitignore  404.html  LICENSE  MANIFEST.in  README.md  index.html  objects.inv  pyproject.toml  setup.py
.github/workflows/: deploy.yml  python-package.yml  python-publish.yml
css/: extra.css
docs/: mkdocs.yml
docs/docs/: api_reference.md  feature-checklist.md  features.md  index.md
docs/docs/reference/: base.md  clustering.md  correlation.md  descriptive.md  distributions.md  hypothesis.md  regression.md  utils.md  visualization.md
examples/: 01-descriptive-circular-statistics.ipynb  02-circular-median.ipynb  03-Fisher-1993.ipynb  04-Zar-2010.ipynb  B1-Fisher-1993.ipynb  B2-Zar-2010.ipynb  B3-CircStatInR.ipynb  B3-Pewsey-2014.ipynb  T0-utils.ipynb  T1-descriptive-circular-statistics.ipynb  T1-descriptive-statistics.ipynb  T1-descriptive_statistics.ipynb  T2-circular-median.ipynb  T2-hypothesis-testing.ipynb  T3-Goodness-of-Fit.ipynb  T3-circular-distributions.ipynb  T3-circular-models.ipynb  T4-regression.ipynb  T5-clustering copy.ipynb  T5-clustering.ipynb
feature-checklist/: index.html
misc/: logo.ipynb
pycircstat2/: __init__.py  base.py  clustering.py  correlation.py  data.py  descriptive.py  distribution.py  distributions.py  hypothesis.py  plot.py  regression.py  utils.py  visualization.py
reference/base/: index.html
reference/clustering/: index.html
reference/correlation/: index.html
reference/descriptive/: index.html
reference/distributions/: index.html
reference/hypothesis/: index.html
reference/regression/: index.html
reference/utils/: index.html
reference/visualization/: index.html
search/: search_index.json
tests/: test_base.py  test_clustering.py  test_correlation.py  test_descriptive.py  test_distribution.py  test_distributions.py  test_distributions_stats.py  test_hypothesis.py  test_regression.py  test_utils.py
(+93 files in other folders)
