[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pycircstat2"
version = "0.1.1"  
description = "Python toolbox for circular statistcs."
authors = [
]
requires-python = ">=3.9.0"
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "matplotlib",
]
readme = {file = "README.md", content-type = "text/markdown"}

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "jupyter",
    "neuron",
    "pytest",
]

[tool.setuptools]
packages = {find = {}}
include-package-data = true