[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pycircstat2"
version = "0.1.8"  
description = "Circular statistcs with Python."
authors = [
]
requires-python = ">=3.9.0"
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "matplotlib",
    "formulaic",
]
readme = {file = "README.md", content-type = "text/markdown"}

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "mkdocs",
    "mkdocs-material-extensions",
    "mkdocstrings[python]",
    "watermark",
    "polars",
]

[tool.setuptools]
packages = {find = {}}
include-package-data = true